# seceng-common

./: .gitignore  helpers  helpers-charm
charmlib/: .gitignore  pyproject.toml  tox.ini
charmlib/src/charmlibs/seceng/: __init__.py  base.py  interfaces.py  secrets.yaml  server.py  template.py  templates.yaml  types.py  utils.py
charmlib/tests/unit/: test_charm.py  test_charm_config.py  test_charm_templates.py
debian/: changelog  control  copyright  seceng-common.install
etc/: 50-seceng-infra  ssh_known_hosts
nginx/charm/: charmcraft.yaml  pyproject.toml  requirements.txt  templates.yaml
nginx/charm/src/: charm.py
nginx/charm/tests/unit/: test_charm.py
rsync-daemon/charm/: charmcraft.yaml  pyproject.toml  requirements.txt  templates.yaml
rsync-daemon/charm/src/: charm.py
scripts/: git-askpass  git-sync  lpl_common.py  new_service.py  repo-sync  send_notification.py  swift_tools
scripts/skel/debian/: new_service.install.j2  new_service.postinst.j2  new_service.postrm.j2  new_service.service.j2  new_service.timer.j2
scripts/skel/new_service/: config.ini.j2  environment
scripts/skel/new_service/charm/: charmcraft.yaml.j2  templates.yaml.j2
scripts/skel/new_service/charm/src/: charm.py.j2
scripts/test/: test.json  test.sh  test_config_custom_exec  test_config_custom_json  test_git-askpass  test_send-notification.py  test_use_add_prefix  test_use_exec_with_arguments  test_use_include_bcc  test_use_json  test_use_only_on_stderr_with_error  test_use_replace_to  test_use_summary  test_use_summary_no_emails_sent
scripts/test/config_dir/: config.ini  smtp.ini
server/charm/: charmcraft.yaml  pyproject.toml  requirements.txt  templates.yaml  tox.ini
server/charm/src/: charm.py
server/charm/tests/unit/: test_charm.py
