# Copyright 2026 Luci Stanescu
# See LICENSE file for licensing details.

[project]
name = "canonical-seceng-server"
description = "A charm that configures a base server installation for SecEng."
license = "Apache-2.0"
authors = [
    {name="The Security Engineering team at Canonical Ltd."},
]
dynamic = ["version"]

# Dependencies of the charm code
# You should include the dependencies of the code in src/. You should also include the
# dependencies of any charmlibs that the charm uses (copy the dependencies from PYDEPS).
dependencies = [
    "ops>=3,<4",
    "charmlibs-seceng @ git+https://github.com/canonical/seceng-common@792fc76d201a7a52eb63bb61b10284c69fcf038f#subdirectory=charmlib",
]

[build-system]
requires = [
    "setuptools >=80",
    "setuptools_scm >=8",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
    "ops[testing]",
    "ops-scenario<8.5.2",
    "pytest",
    "coverage[toml]",
    "jubilant",
]
# FIXME: These are unused until we can switch to dependency_groups for tox >=
# 4.22.
# # Dependencies of linting and static type checks
# lint = [
#     "ruff",
#     "codespell",
#     "pyright",
#     "mypy",
# ]
# # Dependencies of unit tests
# unit = [
#     "coverage[toml]",
#     "ops[testing]",
#     "pytest",
# ]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 120
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "I001",
]
extend-exclude = ["__pycache__", "*.egg_info"]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}
format.quote-style = "preserve"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src", "tests"]
